--- a/View/Base.lproj/LaunchScreen.storyboard
+++ b/View/Base.lproj/LaunchScreen.storyboard
@@ -15,10 +15,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EUW-hG-7MB">
-                                <rect key="frame" x="100" y="406" width="214.5" height="84"/>
-                                <string key="text">Homework 2.1
-Exercise 1</string>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Homework 2.1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="EUW-hG-7MB">
+                                <rect key="frame" x="100" y="427" width="214.5" height="42"/>
                                 <fontDescription key="fontDescription" type="italicSystem" pointSize="35"/>
                                 <color key="textColor" red="0.57045853140000002" green="0.57047235969999999" blue="0.57046490910000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </label>
@@ -26,8 +24,9 @@ Exercise 1</string>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="1" green="0.83234566450000003" blue="0.47320586440000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="EUW-hG-7MB" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="8AQ-sL-YDV"/>
+                            <constraint firstItem="EUW-hG-7MB" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="100" id="CQF-cU-mzt"/>
                             <constraint firstItem="EUW-hG-7MB" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="HRj-wj-3bJ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="EUW-hG-7MB" secondAttribute="trailing" constant="99.5" id="abj-cX-SLA"/>
                         </constraints>
                     </view>
                 </viewController>
