Work with launchScreen.storyboard

--- a/View/Base.lproj/LaunchScreen.storyboard
+++ b/View/Base.lproj/LaunchScreen.storyboard
@@ -15,8 +15,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Homework 2.1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="EUW-hG-7MB">
-                                <rect key="frame" x="100" y="427" width="214.5" height="42"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="EUW-hG-7MB">
+                                <rect key="frame" x="100" y="406" width="214.5" height="84"/>
+                                <string key="text">Homework 2.1 
+Two Views</string>
                                 <fontDescription key="fontDescription" type="italicSystem" pointSize="35"/>
                                 <color key="textColor" red="0.57045853140000002" green="0.57047235969999999" blue="0.57046490910000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </label>
